--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 
   body{
     background-color:black;
-    display: flex;
-    justify-content: center;
-    
-
-    
+   
   }
+
+html{
+  scroll-behavior: smooth;
+}
   
